--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
                 <li><a href="projects/project2/index.html"> Project2</a></li>
                 <li><a href="projects/project3/index.html"> Project3</a></li>
                 <li><a href="projects/project4/index.html"> Project4</a></li>
-                <li><p>Project5</p>
+                <li><p>Project5</p></li>
                     <ul>
                         <li><a href="projects/project5/bottleindex.html">Bottle</a></li>
                         <li><a href="projects/project5/index.html">Stop Light</a></li>
                         <li><a href="projects/project5/badgeindex.html">Badge</a></li>
                         <li><a href="projects/project5/cuffindex.html">Cuffs</a></li>
                     </ul>
-                </li>
-            </ol>
+                </ol>
         <h3>Exercises</h3>
             <ol>
                 
