--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
                 </ol>
         <h3>Exercises</h3>
             <ol>
-                
+                <li><a href="exercises/exercise1/index.html">Exercise1</a></li>
+                <li><a href="exercises/exercise1/index2.html">Exercise2</a></li>
+                  <li><a href="exercises/exercise6/index.html">Exercise6</a></li>
+                    <li><a href="exercises/exercise7/index.html">Exercise7</a></li>
+                      <li><a href="exercises/exercise8/index1.html">Exercise8</a></li>
+                        <li><a href="exercises/ex11/index.html">Exercise11</a></li>
+
             </ol>
     </body>
     
