--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
@@ -10,6 +12,7 @@
     </head>
     
     <body>
+        <h3>BEN GREENBERG</h3>
         <h3>Projects</h3>
             <ol>
                 <li><a href="projects/project1/poster.html"> Project1</a></li>
