--- a/projects/project3/pennyindex.html
+++ b/projects/project3/pennyindex.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/pennycss.css">
+        <link rel="stylesheet" type="text/css" href="css/penny.css">
     </head>
 <body>
 <div id="god">
