--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ol>
                 <li><a href="projects/project1/poster.html"> Project1</a></li>
                 <li><a href="projects/project2/index.html"> Project2</a></li>
-                <li><a href="projects/project3/index.html"> Project3</a></li>
+                <li><a href="projects/project3/index3.html"> Project3</a></li>
                 <li><a href="projects/project4/index.html"> Project4</a></li>
                 <li><p>Project5</p></li>
                     <ul>
